--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	box-sizing: border-box;
 }
 
-/*font for h1 head*/
+/*fonts*/
 @font-face{
 	font-family: "Balqis";
 	src: url("fonts/Balqis.woff2") format("woff2"),
@@ -64,10 +64,10 @@ footer{
 }
 
  
-
+/* header */
 .header{
  background-image: url(images/header_1.jpg);
- height: 100vh;
+ height: 75vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: bottom center;
@@ -79,7 +79,7 @@ margin: 0 auto;
 padding: 0 15px;
 }
 
-.headerTop{
+.header-top{
 	display: flex;
 	justify-content: space-between;
 	padding-top: 40px;
@@ -87,14 +87,14 @@ padding: 0 15px;
 	line-height: 28px;
 }
 
-.titleHeader{
+.title-header{
 	font-family: Balqis;
 	font-size: 100px;
 	line-height: 120px;
 	text-align: center;
 	font-style: italic;
 }
-.titleHeader span{
+.title-header span{
 	display: block;
 	text-align: right;
 	font-size: 35px;
@@ -102,125 +102,79 @@ padding: 0 15px;
 	font-style: italic;
 }
 
-.menuListItem{
+/* header-menu */
+.menu__list-item{
 	display: inline-block;
+	border: 2px solid rgb(70, 130, 180);
+	font-size: 20px;
+	font-style: italic;
+	color: rgb(138, 231, 236);
+	height: 30px;
+	text-align: center;
+	position: relative;
+	margin: 10px;
+	overflow: hidden;
 }
 
-.menuListItem + .menuListItem{
-	margin-left: 5px;
+.menu__list-item::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: rgb(125, 213, 226);
+	top: 0;
+	left: -100%;
+	opacity: 0.5;
+	transition: 0.3s;
+	/* z-index: -1; */
 }
-.menuTopButton{
-	background-color: rgb(104, 198, 230, 0.8);
-	color: white;
+
+.menu__list-item:hover::before {
+	left: 0;	
 }
 
 /* sliderCertificate */
 
-.sliderCertificate{
-	border: 6px solid rgba(122, 125, 126, 0.9);
-	position: relative;
-	margin: 0 auto;
-	width: 610px;
-}
-
-.prev, .next{
-cursor: pointer;
-position: absolute;
-top: 50%;
-width: auto;
-margin-top: -22px;
-padding: 16px;
-color: darkblue;
-font-weight: bold;
-font-size: 18px;
-transition: 4s ease;
-border-radius: 0 3px 3px 0;
-}
-
-.next{
-	right: 0;
-	border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover{
-	background-color: rgba(43, 178, 223, 0.8);
-}
-
-.dot{
-	cursor: pointer;
-	height: 13px;
-	width: 13px;
-	margin: 0.2px;
-	background-color: blue;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 4s ease;
-}
-
-.active, dot:hover{
-background-color: darkblue;
-}
-
-.fade{
-	-webkit-animation-name:fade;
-	-webkit-animation-duration: 1.5s ease;
-	animation-name: fade;
-	animation-duration: 1.5s ease;
-}
-
-.text-slider{
-	font-family: appetite new;
-	font-size: 80px;
-	line-height: 100px;
-	text-align: center;
-	font-style: italic;
-	text-shadow: 5px 2px 4px rgba(16, 105, 134, 0.8);
-}
-
-@keyframes fade{
-	form{opacity:.4;}
-	to{opacity: 1;}
-}
-
-.orderFormButton{
+.order-form__button {
 	color: white;
 	background-color: rgb(248, 12, 12, 1);
 	width: 120px;
 	height: 54px;
 }
 
-.titleSection{
+.title-section{
 	font-size: 30px;
 	font-style: italic;
 	text-shadow: 5px 2px 4px rgba(43, 178, 223, 0.8);
 }
 
-.whyAreWe{
+/* block why are we */
+.why-are-we{
 	margin: 0 auto;
-	min-width: 1200px;
 }
 
-.pLeft{
+.p-left{
 	padding: 15px;
 	text-align: left;
 }
 
-.pRight{
+.p-right{
 	padding: 15px;
 	text-align: right;
 }
 
-.whyAreWeImgLeft{
+.why-are-we__img-left{
 	float: left;
 	margin: 10px 10px 10px 10px;
 }
 
-.whyAreWeImgRight{
+.why-are-we__img-right{
 	float: right;
 	margin: 10px 10px 10px 10px;
 }
 
-.footerBlok{
+/* footer blok */
+.footer__blok{
 	width: 50%;
 	margin: 0 auto;
 	height: 200px;
