--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ footer{
 /* header */
 .header{
  background-image: url(images/header_1.jpg);
- height: 75vh;
+ height: 70vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: bottom center;
@@ -137,9 +137,30 @@ padding: 0 15px;
 
 .order-form__button {
 	color: white;
-	background-color: rgb(248, 12, 12, 1);
+	background-color: rgb(248, 12, 12, 0.5);
 	width: 120px;
 	height: 54px;
+	font-size: 15px;
+	font-style: italic;
+	position: relative;
+	overflow: hidden;
+}
+
+.order-form__button::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: rgb(238, 24, 24);
+	top: 0;
+	left: -100%;
+	opacity: 1;
+	transition: 0.3s;
+	z-index: -1;
+}
+
+.order-form__button:hover::before {
+	left: 0;	
 }
 
 .title-section{
@@ -173,9 +194,65 @@ padding: 0 15px;
 	margin: 10px 10px 10px 10px;
 }
 
+/* blok how are we working */
+.order-form__button {
+	color: white;
+	background-color: rgb(248, 12, 12, 0.5);
+	width: 120px;
+	height: 54px;
+	font-size: 15px;
+	font-style: italic;
+	position: relative;
+	overflow: hidden;
+}
+
+.order-form__button::before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: rgb(238, 24, 24);
+	top: 0;
+	left: -100%;
+	opacity: 1;
+	transition: 0.3s;
+	z-index: -1;
+}
+
+.order-form__button:hover::before {
+	left: 0;	
+}
+
 /* footer blok */
 .footer__blok{
 	width: 50%;
 	margin: 0 auto;
 	height: 200px;
+}
+
+/* footer menu */
+.footer__menu-list{
+	font-size: 15px;
+	color: rgb(138, 231, 236);
+	width: 150px;
+	height: 20px;
+	position: relative;
+	overflow: hidden;
+	display: block;
+}
+
+.footer__menu-list::before{
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: rgb(223, 204, 121);
+	top: 0;
+	left: -100%;
+	opacity: 0.5;
+	transition: 0.3s;
+}
+
+.footer__menu-list:hover::before {
+	left: 0;	
 }
