--- a/style.css
+++ b/style.css
@@ -105,15 +105,17 @@ padding: 0 15px;
 /* header-menu */
 .menu__list-item{
 	display: inline-block;
-	border: 2px solid rgb(70, 130, 180);
-	font-size: 20px;
+	font-size: 15px;
 	font-style: italic;
+	text-align: center;
 	color: rgb(138, 231, 236);
+	width: 130px;
 	height: 30px;
 	text-align: center;
 	position: relative;
 	margin: 10px;
 	overflow: hidden;
+	z-index: 1;
 }
 
 .menu__list-item::before {
@@ -123,10 +125,10 @@ padding: 0 15px;
 	height: 100%;
 	background: rgb(125, 213, 226);
 	top: 0;
-	left: -100%;
+	left: -98%;
 	opacity: 0.5;
 	transition: 0.3s;
-	/* z-index: -1; */
+	z-index: -1;
 }
 
 .menu__list-item:hover::before {
@@ -135,33 +137,7 @@ padding: 0 15px;
 
 /* sliderCertificate */
 
-.order-form__button {
-	color: white;
-	background-color: rgb(248, 12, 12, 0.5);
-	width: 120px;
-	height: 54px;
-	font-size: 15px;
-	font-style: italic;
-	position: relative;
-	overflow: hidden;
-}
 
-.order-form__button::before {
-	position: absolute;
-	content: '';
-	width: 100%;
-	height: 100%;
-	background: rgb(238, 24, 24);
-	top: 0;
-	left: -100%;
-	opacity: 1;
-	transition: 0.3s;
-	z-index: -1;
-}
-
-.order-form__button:hover::before {
-	left: 0;	
-}
 
 .title-section{
 	font-size: 30px;
@@ -239,6 +215,7 @@ padding: 0 15px;
 	position: relative;
 	overflow: hidden;
 	display: block;
+	z-index: 1;
 }
 
 .footer__menu-list::before{
@@ -251,6 +228,7 @@ padding: 0 15px;
 	left: -100%;
 	opacity: 0.5;
 	transition: 0.3s;
+	z-index: -1;
 }
 
 .footer__menu-list:hover::before {
